--- a/jeffs_notebook.ipynb
+++ b/jeffs_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,116 @@
     "from bs4 import BeautifulSoup\n",
     "import os\n",
     "import json\n",
-    "from os import path"
+    "from os import path\n",
+    "import re"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Find Top Language Used - Done\n",
-    "### Scrape body of README.md - In Progress\n",
-    "### Put into DataFrame - Not Done at all"
+    "def get_links(url):\n",
+    "    url = []\n",
+    "    \n",
+    "    for h1 in soup.find_all('h1'):\n",
+    "        url.append((re.sub(r'\\s', '',h1.text)))\n",
+    "    url.pop(0)\n",
+    "    return url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_urls():\n",
+    "    urls = ['https://github.com/trending', \n",
+    "        'https://github.com/collections/clean-code-linters', \n",
+    "        'https://github.com/collections/open-journalism', \n",
+    "        'https://github.com/collections/design-essentials',\n",
+    "        'https://github.com/collections/music',\n",
+    "        'https://github.com/collections/devops-tools'\n",
+    "       ]\n",
+    "    \n",
+    "    output = []\n",
+    "    \n",
+    "    for url in urls:\n",
+    "         output.extend(get_links(url))\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_urls():\n",
+    "    output = []\n",
+    "    urls = get_urls()\n",
+    "    for url in urls:\n",
+    "        base_url = 'https://github.com/{}'.format(url)\n",
+    "        output.append(base_url)\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_dataframe():\n",
+    "\n",
+    "    output = []\n",
+    "    \n",
+    "    urls = create_urls()\n",
+    "    \n",
+    "    for url in urls:\n",
+    "        headers = {'User-Agent': 'Codeup Data Science Student'}\n",
+    "        response = get(url, headers=headers)\n",
+    "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "        title = urls[url]\n",
+    "        language = soup.find('span', class_= 'lang').text\n",
+    "        body = soup.find('div', class_= 'Box-body').text\n",
+    "\n",
+    "        data = {\n",
+    "            'title' : title,\n",
+    "            'language' : language,\n",
+    "            'body' : body\n",
+    "        }\n",
+    "\n",
+    "        output.append(data)\n",
+    "    \n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'soup' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-46-078b557b1adf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_dataframe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-45-505e87c77ae9>\u001b[0m in \u001b[0;36mget_dataframe\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0murls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_urls\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0murl\u001b[0m \u001b[0;32min\u001b[0m \u001b[0murls\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-24-7403652128b0>\u001b[0m in \u001b[0;36mcreate_urls\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcreate_urls\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0murls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_urls\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0murl\u001b[0m \u001b[0;32min\u001b[0m \u001b[0murls\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mbase_url\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'https://github.com/{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-42-a5ad2b46ee25>\u001b[0m in \u001b[0;36mget_urls\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0murl\u001b[0m \u001b[0;32min\u001b[0m \u001b[0murls\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m          \u001b[0moutput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mget_links\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-41-9af1da9aeae0>\u001b[0m in \u001b[0;36mget_links\u001b[0;34m(url)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0murl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mh1\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'h1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \u001b[0murl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr'\\s'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mh1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0murl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'soup' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "get_dataframe()"
    ]
   },
   {
@@ -28,52 +128,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# url = 'http://site-to-scrape.glitch.me/'\n",
-    "\n",
-    "url = 'https://github.com/AIDungeon/AIDungeon'\n",
-    "\n",
-    "headers = {'User-Agent': 'Codeup Data Science Student'}\n",
-    "\n",
-    "response = get(url, headers=headers)\n",
-    "\n",
-    "# print(response.content)\n",
-    "\n",
-    "soup = BeautifulSoup(response.content, 'html.parser')\n",
-    "\n",
-    "soup.find('span', class_= 'lang').text\n",
-    "\n",
-    "soup.find_all('span', class_= 'lang')[0].text\n",
-    "\n",
-    "\n",
-    "\n",
-    "# soup.select('span')\n",
-    "\n",
-    " = []\n",
-    "full_beer = []\n",
-    "for l in short_list:\n",
-    "    url = 'https://github.com/trending/\n",
-    "    #source = urllib.request.urlopen('https://untappd.com/beer/top_rated?type={}'.format(l)).read()\n",
-    "    headers = {'User-Agent': 'Codeup Data Science Student'}\n",
-    "    response = get(url, headers=headers)\n",
-    "    soup = BeautifulSoup(response.content, 'html.parser') \n",
-    "    table = soup.find_all(\"div\",{\"class\":\"beer-item\"})\n",
-    "    #table_rows = soup.find_all('span',{\"class\":\"num\"})\n",
-    "    full_beer.append(beers)\n",
-    "    #beers = []\n",
-    "    \n",
-    "    for t in table:\n",
-    "        rating = t.select('span',{\"class\":\"num\"})\n",
-    "        name = t.select('a',{\"class\":\"name\"})\n",
-    "        brewery = t.select('a',{\"class\":\"style\"})\n",
-    "        style = t.select('p',{\"class\":\"style\"})\n",
-    "        row_rating = [i.text for i in rating]\n",
-    "        row_name = [i.text for i in name]\n",
-    "        row_brewery = [i.text for i in brewery]\n",
-    "        row_style = [i.text for i in style]\n",
-    "        beers.append([row_name[1],row_rating[1],row_brewery[2],row_style[2]])\n",
-    "        time.sleep(.3)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
