repo list added

--- a/jeffs_notebook.ipynb
+++ b/jeffs_notebook.ipynb
@@ -115,6 +115,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_links():\n",
+    "#     url = 'https://github.com/trending'\n",
+    "#     url = 'https://github.com/collections/clean-code-linters'\n",
+    "#     url = 'https://github.com/collections/open-journalism'\n",
+    "#     url = 'https://github.com/collections/design-essentials'\n",
+    "#     url = 'https://github.com/collections/music'\n",
+    "    url = 'https://github.com/collections/devops-tools'\n",
+    "    headers = {'User-Agent': 'Codeup Data Science Student'}\n",
+    "    response = get(url, headers=headers)\n",
+    "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "    \n",
+    "    urls = []\n",
+    "    \n",
+    "    for h1 in soup.find_all('h1'):\n",
+    "        urls.append((re.sub(r'\\s', '',h1.text)))\n",
+    "    urls.pop(0)\n",
+    "    return urls"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
