--- a/jeffs_notebook.ipynb
+++ b/jeffs_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,48 +40,277 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def get_urls():\n",
-    "#     urls = [ \n",
-    "#         'https://github.com/trending'\n",
-    "#         'https://github.com/collections/clean-code-linters', \n",
-    "#         'https://github.com/collections/open-journalism', \n",
-    "#         'https://github.com/collections/design-essentials',\n",
-    "#         'https://github.com/collections/music',\n",
-    "#         'https://github.com/collections/devops-tools'\n",
-    "#        ]\n",
-    "    \n",
-    "#     headers = {'User-Agent': 'Codeup Data Science Student'}\n",
-    "#     response = get(urls, headers=headers)\n",
-    "#     soup = BeautifulSoup(response.content, 'html.parser')\n",
-    "    \n",
-    "#     new_urls = []\n",
-    "    \n",
-    "#     for url in urls:\n",
-    "\n",
-    "#         soup.find_all('h1')\n",
-    "#         urls.append((re.sub(r'\\s', '',h1.text)))\n",
-    "#         urls.pop(0)\n",
-    "        \n",
-    "#     return new_urls "
+    "def create_urls(string):\n",
+    "    urls = []\n",
+    "    for item in string:\n",
+    "        base_url = 'https://github.com/{}'.format(item)\n",
+    "        urls.append(base_url)\n",
+    "    return urls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def create_urls():\n",
-    "#     output = []\n",
-    "#     urls = get_urls()\n",
-    "#     for url in urls:\n",
-    "#         base_url = 'https://github.com/{}'.format(url)\n",
-    "#         output.append(base_url)\n",
-    "#     return output"
+    "repo_list = create_urls(string=repo_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://github.com/AIDungeon/AIDungeon',\n",
+       " 'https://github.com/rclone/rclone',\n",
+       " 'https://github.com/marblexu/PythonPlantsVsZombies',\n",
+       " 'https://github.com/redox-os/orbtk',\n",
+       " 'https://github.com/sailay1996/UAC_Bypass_In_The_Wild',\n",
+       " 'https://github.com/ruanyf/weekly',\n",
+       " 'https://github.com/alirezadir/Production-Level-Deep-Learning',\n",
+       " 'https://github.com/sdmg15/Best-websites-a-programmer-should-visit',\n",
+       " 'https://github.com/practicalAI/practicalAI',\n",
+       " 'https://github.com/HuaweiJoke/Huawei-Joke',\n",
+       " 'https://github.com/trekhleb/javascript-algorithms',\n",
+       " 'https://github.com/521xueweihan/HelloGitHub',\n",
+       " 'https://github.com/getify/You-Dont-Know-JS',\n",
+       " 'https://github.com/kdn251/interviews',\n",
+       " 'https://github.com/eavichay/microfronts',\n",
+       " 'https://github.com/goldbergyoni/nodebestpractices',\n",
+       " 'https://github.com/wuyouzhuguli/SpringAll',\n",
+       " 'https://github.com/halo-dev/halo',\n",
+       " 'https://github.com/serverless/serverless',\n",
+       " 'https://github.com/prometheus/client_golang',\n",
+       " 'https://github.com/VMadalin/kotlin-sample-app',\n",
+       " 'https://github.com/davidfowl/FeatherHttp',\n",
+       " 'https://github.com/0vercl0k/CVE-2019-11708',\n",
+       " 'https://github.com/mrdoob/three.js',\n",
+       " 'https://github.com/OfficeDev/office-ui-fabric-react',\n",
+       " 'https://github.com/standard/standard',\n",
+       " 'https://github.com/eslint/eslint',\n",
+       " 'https://github.com/jshint/jshint',\n",
+       " 'https://github.com/clutchski/coffeelint',\n",
+       " 'https://github.com/csscomb/csscomb.js',\n",
+       " 'https://github.com/sds/scss-lint',\n",
+       " 'https://github.com/htmlhint/HTMLHint',\n",
+       " 'https://github.com/validator/validator',\n",
+       " 'https://github.com/CSSLint/csslint',\n",
+       " 'https://github.com/PyCQA/pycodestyle',\n",
+       " 'https://github.com/PyCQA/flake8',\n",
+       " 'https://github.com/psf/black',\n",
+       " 'https://github.com/checkstyle/checkstyle',\n",
+       " 'https://github.com/rubocop-hq/rubocop',\n",
+       " 'https://github.com/oclint/oclint',\n",
+       " 'https://github.com/golang/lint',\n",
+       " 'https://github.com/ndmitchell/hlint',\n",
+       " 'https://github.com/coala/coala',\n",
+       " 'https://github.com/pre-commit/pre-commit',\n",
+       " 'https://github.com/innogames/igcommit',\n",
+       " 'https://github.com/fivethirtyeight/data',\n",
+       " 'https://github.com/datadesk/notebooks',\n",
+       " 'https://github.com/nytimes/objective-c-style-guide',\n",
+       " 'https://github.com/newsapps/beeswithmachineguns',\n",
+       " 'https://github.com/voxmedia/meme',\n",
+       " 'https://github.com/propublica/guides',\n",
+       " 'https://github.com/censusreporter/censusreporter',\n",
+       " 'https://github.com/nprapps/app-template',\n",
+       " 'https://github.com/TimeMagazineLabs/babynames',\n",
+       " 'https://github.com/guardian/frontend',\n",
+       " 'https://github.com/dukechronicle/chronline',\n",
+       " 'https://github.com/BloombergMedia/whatiscode',\n",
+       " 'https://github.com/times/cardkit',\n",
+       " 'https://github.com/mkiser/WTFJHT',\n",
+       " 'https://github.com/twbs/bootstrap',\n",
+       " 'https://github.com/daneden/animate.css',\n",
+       " 'https://github.com/nathansmith/960-Grid-System',\n",
+       " 'https://github.com/necolas/normalize.css',\n",
+       " 'https://github.com/ionic-team/ionicons',\n",
+       " 'https://github.com/designmodo/Flat-UI',\n",
+       " 'https://github.com/h5bp/html5-boilerplate',\n",
+       " 'https://github.com/foundation/foundation-sites',\n",
+       " 'https://github.com/Modernizr/Modernizr',\n",
+       " 'https://github.com/twbs/ratchet',\n",
+       " 'https://github.com/IanLunn/Hover',\n",
+       " 'https://github.com/connors/photon',\n",
+       " 'https://github.com/basscss/basscss',\n",
+       " 'https://github.com/atlemo/SubtlePatterns',\n",
+       " 'https://github.com/mrmrs/colors',\n",
+       " 'https://github.com/beetbox/beets',\n",
+       " 'https://github.com/scottschiller/SoundManager2',\n",
+       " 'https://github.com/CreateJS/SoundJS',\n",
+       " 'https://github.com/musescore/MuseScore',\n",
+       " 'https://github.com/tomahawk-player/tomahawk',\n",
+       " 'https://github.com/cashmusic/platform',\n",
+       " 'https://github.com/mopidy/mopidy',\n",
+       " 'https://github.com/AudioKit/AudioKit',\n",
+       " 'https://github.com/Soundnode/soundnode-app',\n",
+       " 'https://github.com/gillesdemey/Cumulus',\n",
+       " 'https://github.com/metabrainz/picard',\n",
+       " 'https://github.com/overtone/overtone',\n",
+       " 'https://github.com/samaaron/sonic-pi',\n",
+       " 'https://github.com/puppetlabs/puppet',\n",
+       " 'https://github.com/chef/chef',\n",
+       " 'https://github.com/ansible/ansible',\n",
+       " 'https://github.com/saltstack/salt',\n",
+       " 'https://github.com/hashicorp/vagrant',\n",
+       " 'https://github.com/openstack/openstack',\n",
+       " 'https://github.com/moby/moby',\n",
+       " 'https://github.com/capistrano/capistrano',\n",
+       " 'https://github.com/statsd/statsd',\n",
+       " 'https://github.com/graphite-project/graphite-web',\n",
+       " 'https://github.com/elastic/logstash',\n",
+       " 'https://github.com/fabric/fabric',\n",
+       " 'https://github.com/grafana/grafana',\n",
+       " 'https://github.com/StackStorm/st2',\n",
+       " 'https://github.com/openshift/origin',\n",
+       " 'https://github.com/getsentry/sentry',\n",
+       " 'https://github.com/deployphp/deployer',\n",
+       " 'https://github.com/kubernetes/kubernetes',\n",
+       " 'https://github.com/netdata/netdata',\n",
+       " 'https://github.com/cloud66-oss/habitus']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(repo_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AIDungeon/AIDungeon',\n",
+       " 'rclone/rclone',\n",
+       " 'marblexu/PythonPlantsVsZombies',\n",
+       " 'redox-os/orbtk',\n",
+       " 'sailay1996/UAC_Bypass_In_The_Wild',\n",
+       " 'ruanyf/weekly',\n",
+       " 'alirezadir/Production-Level-Deep-Learning',\n",
+       " 'sdmg15/Best-websites-a-programmer-should-visit',\n",
+       " 'practicalAI/practicalAI',\n",
+       " 'HuaweiJoke/Huawei-Joke',\n",
+       " 'trekhleb/javascript-algorithms',\n",
+       " '521xueweihan/HelloGitHub',\n",
+       " 'getify/You-Dont-Know-JS',\n",
+       " 'kdn251/interviews',\n",
+       " 'eavichay/microfronts',\n",
+       " 'goldbergyoni/nodebestpractices',\n",
+       " 'wuyouzhuguli/SpringAll',\n",
+       " 'halo-dev/halo',\n",
+       " 'serverless/serverless',\n",
+       " 'prometheus/client_golang',\n",
+       " 'VMadalin/kotlin-sample-app',\n",
+       " 'davidfowl/FeatherHttp',\n",
+       " '0vercl0k/CVE-2019-11708',\n",
+       " 'mrdoob/three.js',\n",
+       " 'OfficeDev/office-ui-fabric-react',\n",
+       " 'standard/standard',\n",
+       " 'eslint/eslint',\n",
+       " 'jshint/jshint',\n",
+       " 'clutchski/coffeelint',\n",
+       " 'csscomb/csscomb.js',\n",
+       " 'sds/scss-lint',\n",
+       " 'htmlhint/HTMLHint',\n",
+       " 'validator/validator',\n",
+       " 'CSSLint/csslint',\n",
+       " 'PyCQA/pycodestyle',\n",
+       " 'PyCQA/flake8',\n",
+       " 'psf/black',\n",
+       " 'checkstyle/checkstyle',\n",
+       " 'rubocop-hq/rubocop',\n",
+       " 'oclint/oclint',\n",
+       " 'golang/lint',\n",
+       " 'ndmitchell/hlint',\n",
+       " 'coala/coala',\n",
+       " 'pre-commit/pre-commit',\n",
+       " 'innogames/igcommit',\n",
+       " 'fivethirtyeight/data',\n",
+       " 'datadesk/notebooks',\n",
+       " 'nytimes/objective-c-style-guide',\n",
+       " 'newsapps/beeswithmachineguns',\n",
+       " 'voxmedia/meme',\n",
+       " 'propublica/guides',\n",
+       " 'censusreporter/censusreporter',\n",
+       " 'nprapps/app-template',\n",
+       " 'TimeMagazineLabs/babynames',\n",
+       " 'guardian/frontend',\n",
+       " 'dukechronicle/chronline',\n",
+       " 'BloombergMedia/whatiscode',\n",
+       " 'times/cardkit',\n",
+       " 'mkiser/WTFJHT',\n",
+       " 'twbs/bootstrap',\n",
+       " 'daneden/animate.css',\n",
+       " 'nathansmith/960-Grid-System',\n",
+       " 'necolas/normalize.css',\n",
+       " 'ionic-team/ionicons',\n",
+       " 'designmodo/Flat-UI',\n",
+       " 'h5bp/html5-boilerplate',\n",
+       " 'foundation/foundation-sites',\n",
+       " 'Modernizr/Modernizr',\n",
+       " 'twbs/ratchet',\n",
+       " 'IanLunn/Hover',\n",
+       " 'connors/photon',\n",
+       " 'basscss/basscss',\n",
+       " 'atlemo/SubtlePatterns',\n",
+       " 'mrmrs/colors',\n",
+       " 'beetbox/beets',\n",
+       " 'scottschiller/SoundManager2',\n",
+       " 'CreateJS/SoundJS',\n",
+       " 'musescore/MuseScore',\n",
+       " 'tomahawk-player/tomahawk',\n",
+       " 'cashmusic/platform',\n",
+       " 'mopidy/mopidy',\n",
+       " 'AudioKit/AudioKit',\n",
+       " 'Soundnode/soundnode-app',\n",
+       " 'gillesdemey/Cumulus',\n",
+       " 'metabrainz/picard',\n",
+       " 'overtone/overtone',\n",
+       " 'samaaron/sonic-pi',\n",
+       " 'puppetlabs/puppet',\n",
+       " 'chef/chef',\n",
+       " 'ansible/ansible',\n",
+       " 'saltstack/salt',\n",
+       " 'hashicorp/vagrant',\n",
+       " 'openstack/openstack',\n",
+       " 'moby/moby',\n",
+       " 'capistrano/capistrano',\n",
+       " 'statsd/statsd',\n",
+       " 'graphite-project/graphite-web',\n",
+       " 'elastic/logstash',\n",
+       " 'fabric/fabric',\n",
+       " 'grafana/grafana',\n",
+       " 'StackStorm/st2',\n",
+       " 'openshift/origin',\n",
+       " 'getsentry/sentry',\n",
+       " 'deployphp/deployer',\n",
+       " 'kubernetes/kubernetes',\n",
+       " 'netdata/netdata',\n",
+       " 'cloud66-oss/habitus']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repo_list"
    ]
   },
   {
@@ -142,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,12 +488,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "acquire."
+    "acquire.scrape_github_data()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -272,6 +508,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
