--- a/jeffs_notebook.ipynb
+++ b/jeffs_notebook.ipynb
@@ -2325,247 +2325,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 461,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 1.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.        , 0.17647059, 0.        , 0.05882353, 0.        ,\n",
-       "        0.05882353, 0.23529412, 0.        , 0.11764706, 0.        ,\n",
-       "        0.35294118, 0.        ],\n",
-       "       [0.        , 0.17647059, 0.        , 0.05882353, 0.        ,\n",
-       "        0.05882353, 0.23529412, 0.        , 0.11764706, 0.        ,\n",
-       "        0.35294118, 0.        ],\n",
-       "       [0.25      , 0.        , 0.        , 0.        , 0.25      ,\n",
-       "        0.25      , 0.        , 0.25      , 0.        , 0.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.92857143, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.07142857],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.92857143, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.07142857],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.92857143, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.07142857],\n",
-       "       [0.        , 0.17647059, 0.        , 0.05882353, 0.        ,\n",
-       "        0.05882353, 0.23529412, 0.        , 0.11764706, 0.        ,\n",
-       "        0.35294118, 0.        ],\n",
-       "       [0.        , 0.        , 1.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.        , 0.17647059, 0.        , 0.05882353, 0.        ,\n",
-       "        0.05882353, 0.23529412, 0.        , 0.11764706, 0.        ,\n",
-       "        0.35294118, 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.92857143, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.07142857],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.92857143, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.07142857],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 1.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.        , 0.17647059, 0.        , 0.05882353, 0.        ,\n",
-       "        0.05882353, 0.23529412, 0.        , 0.11764706, 0.        ,\n",
-       "        0.35294118, 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 1.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.92857143, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.07142857],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.92857143, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.07142857],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.        , 0.17647059, 0.        , 0.05882353, 0.        ,\n",
-       "        0.05882353, 0.23529412, 0.        , 0.11764706, 0.        ,\n",
-       "        0.35294118, 0.        ],\n",
-       "       [0.        , 0.        , 1.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 1.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.92857143, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.07142857],\n",
-       "       [0.        , 0.17647059, 0.        , 0.05882353, 0.        ,\n",
-       "        0.05882353, 0.23529412, 0.        , 0.11764706, 0.        ,\n",
-       "        0.35294118, 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.92857143, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.07142857],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.25      , 0.        , 0.        , 0.        , 0.25      ,\n",
-       "        0.25      , 0.        , 0.25      , 0.        , 0.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.        , 0.        , 1.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.        , 0.17647059, 0.        , 0.05882353, 0.        ,\n",
-       "        0.05882353, 0.23529412, 0.        , 0.11764706, 0.        ,\n",
-       "        0.35294118, 0.        ],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.        , 0.17647059, 0.        , 0.05882353, 0.        ,\n",
-       "        0.05882353, 0.23529412, 0.        , 0.11764706, 0.        ,\n",
-       "        0.35294118, 0.        ],\n",
-       "       [0.        , 0.17647059, 0.        , 0.05882353, 0.        ,\n",
-       "        0.05882353, 0.23529412, 0.        , 0.11764706, 0.        ,\n",
-       "        0.35294118, 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 1.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 1.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.25      , 0.        , 0.        , 0.        , 0.25      ,\n",
-       "        0.25      , 0.        , 0.25      , 0.        , 0.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.25      , 0.        , 0.        , 0.        , 0.25      ,\n",
-       "        0.25      , 0.        , 0.25      , 0.        , 0.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.92857143, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.07142857],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.        , 0.        , 1.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.92857143, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.07142857],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 1.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 1.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.        , 0.17647059, 0.        , 0.05882353, 0.        ,\n",
-       "        0.05882353, 0.23529412, 0.        , 0.11764706, 0.        ,\n",
-       "        0.35294118, 0.        ],\n",
-       "       [0.        , 0.17647059, 0.        , 0.05882353, 0.        ,\n",
-       "        0.05882353, 0.23529412, 0.        , 0.11764706, 0.        ,\n",
-       "        0.35294118, 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.92857143, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.07142857],\n",
-       "       [0.        , 0.        , 1.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.        , 0.17647059, 0.        , 0.05882353, 0.        ,\n",
-       "        0.05882353, 0.23529412, 0.        , 0.11764706, 0.        ,\n",
-       "        0.35294118, 0.        ],\n",
-       "       [0.        , 0.17647059, 0.        , 0.05882353, 0.        ,\n",
-       "        0.05882353, 0.23529412, 0.        , 0.11764706, 0.        ,\n",
-       "        0.35294118, 0.        ],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.        , 0.        , 1.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.        , 0.17647059, 0.        , 0.05882353, 0.        ,\n",
-       "        0.05882353, 0.23529412, 0.        , 0.11764706, 0.        ,\n",
-       "        0.35294118, 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.92857143, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.07142857],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 1.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.        , 0.17647059, 0.        , 0.05882353, 0.        ,\n",
-       "        0.05882353, 0.23529412, 0.        , 0.11764706, 0.        ,\n",
-       "        0.35294118, 0.        ],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.92857143, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.07142857],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 1.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 1.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 1.        ,\n",
-       "        0.        , 0.        ],\n",
-       "       [0.        , 0.17647059, 0.        , 0.05882353, 0.        ,\n",
-       "        0.05882353, 0.23529412, 0.        , 0.11764706, 0.        ,\n",
-       "        0.35294118, 0.        ],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909],\n",
-       "       [0.04545455, 0.        , 0.04545455, 0.18181818, 0.09090909,\n",
-       "        0.09090909, 0.13636364, 0.04545455, 0.        , 0.22727273,\n",
-       "        0.04545455, 0.09090909]])"
-      ]
-     },
-     "execution_count": 312,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred_proba = clf.predict_proba(X_train)\n",
-    "y_pred_proba"
+    "# y_pred_proba"
    ]
   },
   {
@@ -3373,10 +3138,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 436,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. ... 0. 0. 0.]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.4666666666666667"
+      ]
+     },
+     "execution_count": 436,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "X = X_train\n",
+    "y = y_train\n",
+    "clf = AdaBoostClassifier(n_estimators=100, random_state=0)\n",
+    "clf.fit(X, y)\n",
+    "\n",
+    "print(clf.feature_importances_)\n",
+    "\n",
+    "clf.predict(X)\n",
+    "\n",
+    "clf.score(X, y)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -3394,45 +3189,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 458,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Python', 'Go', 'C++', 'JavaScript', 'Jupyter Notebook', 'Python',\n",
+       "       'Python', 'Java', 'JavaScript', 'JavaScript', 'Ruby', 'CSS',\n",
+       "       'TypeScript', 'TypeScript', 'JavaScript', 'Python', 'Python',\n",
+       "       'Java', 'Python', 'JavaScript', 'JavaScript', 'Jupyter Notebook',\n",
+       "       'Ruby', 'CSS', 'Python', 'HTML', 'C++', 'JavaScript', 'JavaScript',\n",
+       "       'Python', 'HTML', 'CSS', 'Ruby', 'TypeScript', 'JavaScript',\n",
+       "       'Python', 'Python', 'Python', 'C', 'Java', 'C++', 'Python',\n",
+       "       'Python', 'CSS', 'Go', 'Python', 'Python', 'C++', 'Go', 'C++',\n",
+       "       'JavaScript', 'JavaScript', 'CSS', 'C++', 'Ruby', 'TypeScript',\n",
+       "       'Go', 'CSS', 'JavaScript', 'HTML', 'Go', 'Python', 'HTML', 'Go',\n",
+       "       'JavaScript', 'Ruby', 'CSS', 'JavaScript', 'Python', 'Ruby',\n",
+       "       'Python', 'Python', 'Ruby', 'Python', 'JavaScript'], dtype=object)"
+      ]
+     },
+     "execution_count": 458,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### Gradient Boosting"
+    "from sklearn.svm import SVC\n",
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "\n",
+    "X = X_train\n",
+    "y = y_train\n",
+    "\n",
+    "clf = BaggingClassifier(n_estimators=3, random_state=0)\n",
+    "clf.fit(X, y)\n",
+    "clf.predict(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 459,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Naive Bayes classifier on training set: 0.84\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Accuracy of Naive Bayes classifier on training set: {:.2f}'\n",
+    "     .format(clf.score(X_train, y_train)))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 460,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21052631578947367"
+      ]
+     },
+     "execution_count": 460,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.score(X_test, y_test)"
+   ]
   }
  ],
  "metadata": {
