--- a/jeffs_notebook.ipynb
+++ b/jeffs_notebook.ipynb
@@ -2903,7 +2903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2915,7 +2915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2924,7 +2924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -2935,7 +2935,7 @@
        "                     weights='uniform')"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2946,7 +2946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2955,7 +2955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2964,7 +2964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -2982,7 +2982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -3010,7 +3010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -3045,7 +3045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -3063,21 +3063,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axis.XTick at 0x1a25d38b70>,\n",
-       "  <matplotlib.axis.XTick at 0x1a25d3b128>,\n",
-       "  <matplotlib.axis.XTick at 0x1a25d3bc50>,\n",
-       "  <matplotlib.axis.XTick at 0x1a25d2c710>,\n",
-       "  <matplotlib.axis.XTick at 0x1a25d27c88>],\n",
+       "([<matplotlib.axis.XTick at 0x1a25d1e2b0>,\n",
+       "  <matplotlib.axis.XTick at 0x1a25d22fd0>,\n",
+       "  <matplotlib.axis.XTick at 0x1a25d21400>,\n",
+       "  <matplotlib.axis.XTick at 0x1a25d13be0>,\n",
+       "  <matplotlib.axis.XTick at 0x1a25d136a0>],\n",
        " <a list of 5 Text xticklabel objects>)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3300,9 +3300,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. ... 0. 0. 0.]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.4533333333333333"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.ensemble import AdaBoostClassifier\n",
     "X = X_train\n",
@@ -3319,10 +3337,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3684210526315789"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.score(X_test, y_test)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3333,9 +3364,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['HTML', 'CSS', 'Go', 'Ruby', 'Python', 'Jupyter Notebook',\n",
+       "       'JavaScript', 'JavaScript', 'JavaScript', 'PHP', 'Python',\n",
+       "       'Python', 'Java', 'CSS', 'JavaScript', 'JavaScript', 'JavaScript',\n",
+       "       'CSS', 'JavaScript', 'Go', 'CSS', 'Python', 'JavaScript',\n",
+       "       'JavaScript', 'Python', 'JavaScript', 'JavaScript', 'JavaScript',\n",
+       "       'Python', 'Python', 'JavaScript', 'Python', 'CSS', 'Java',\n",
+       "       'JavaScript', 'Python', 'CSS', 'JavaScript', 'Python',\n",
+       "       'Jupyter Notebook', 'HTML', 'Go', 'Python', 'JavaScript', 'Go',\n",
+       "       'Python', 'TypeScript', 'Jupyter Notebook', 'C++', 'JavaScript',\n",
+       "       'JavaScript', 'JavaScript', 'HTML', 'Python', 'JavaScript', 'CSS',\n",
+       "       'C', 'JavaScript', 'Jupyter Notebook', 'Python', 'Go', 'Python',\n",
+       "       'Go', 'HTML', 'JavaScript', 'Python', 'Ruby', 'JavaScript', 'C',\n",
+       "       'Ruby', 'Ruby', 'Python', 'PHP', 'Python', 'HTML'], dtype=object)"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.svm import SVC\n",
     "from sklearn.ensemble import BaggingClassifier\n",
@@ -3350,9 +3404,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Bagging classifier on training set: 0.85\n"
+     ]
+    }
+   ],
    "source": [
     "print('Accuracy of Bagging classifier on training set: {:.2f}'\n",
     "     .format(clf.score(X_train, y_train)))"
@@ -3360,19 +3422,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3684210526315789"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "clf.score(X_test, y_test)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Takeaways"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "K-Nearest Neighbors worked the best out of all the models with a train accuracy of 67% and a test accuracy 63%. This was with the hyperparameter number of neighbors, equal to 5 (n_neighbors = 5).\n",
+    "\n",
+    "The model can be improved by adding more repositories in order to get a more representative sample of GitHub repos.  Scaling the list of repos should lead to logarithmic improvements in the model, meaning it should get ever diminishing returns until it peaks at a certain value and never passing it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Project Goal: Create a machine learning model, using sklearn, that predicts the main programming language used in a GitHub repository, based on the text from the repositories README file.\n",
+    "\n",
+    "Programming Language Used for Analysis:  Python, Jupyter Notebook\n",
+    "\n",
+    "Github collections were scraped at random to obtain repository names along with the text from their README files and the primary programming language used.  \n",
+    "\n",
+    "The model can be improved by adding more repositories in order to get a more representative sample of GitHub repos.  Scaling the list of repos should lead to logarithmic improvements in the model, meaning it should get ever diminishing returns until it peaks at a certain value and never passing it."
+   ]
   }
  ],
  "metadata": {
