updated data dictionary

--- a/NLP_Project.ipynb
+++ b/NLP_Project.ipynb
@@ -31,9 +31,9 @@
     "\n",
     "   - **Normalized:** README content normalized removing any uppercased characters, special characters, non-alpha characters, and alpha strings with 2 or less characters\n",
     "\n",
-    "   - **Stemmed:** README content reducing each word to its (psuedo)root \n",
+    "   - **Stemmed:** README content reducing each word to its root stem \n",
     "\n",
-    "   - **Lemmatized:** README content reducing each word to liguistically valid lemmas\n",
+    "   - **Lemmatized:** README content reducing each word to its root word\n",
     "\n",
     "   - **Cleaned:** README content that has been lemmatized and then removes any stopwords "
    ]
